--- a/hello/hello.vcxproj.filters
+++ b/hello/hello.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="hello.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="list_num_plus.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
